# napari-time-slicer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: testing dask timeslicer.ipynb
src/napari_time_slicer/: TimelapseConverter.py  __init__.py  _dock_widget.py  _function.py  _workflow.py
src/napari_time_slicer/_tests/: test_function.py  test_timelapseconverter.py
