[metadata]
name = napari-time-slicer
version = 0.4.9
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/napari-time-slicer
license = BSD-3-Clause
description = A meta plugin for processing timelapse data in napari timepoint by timepoint
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-time-slicer/issues
    Documentation = https://github.com/haesleinhuepf/napari-time-slicer#README.md
    Source Code = https://github.com/haesleinhuepf/napari-time-slicer
    User Support = https://github.com/haesleinhuepf/napari-time-slicer/issues

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    toolz
    napari-tools-menu
    napari-workflows
    dask

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-time-slicer = napari_time_slicer
